--- a/css/yearly.css
+++ b/css/yearly.css
@@ -1,7 +1,7 @@
 body {
    margin: 0; 
    padding: 1em;
-   font-family: sans-serif;
+   font-family: "Lucida Grande", sans-serif;
 }
 
 p {
@@ -18,6 +18,7 @@ ul {
     list-style-type: none;
     width: 100%;
     line-height: 1;
+    font-size: 12px;
 }
 
 li {
@@ -25,14 +26,14 @@ li {
     padding: 0;
     width: 100%;
     position: relative;
-    height: 1.5em;
+    height: 20px;
 }
 
 .playcount {
     z-index: 2;
     position: absolute;
     left: 0.5em;
-    top: 0.25em;
+    top: 3px;
     text-align: right;
     width: 2.5em;
     color: #999;
@@ -42,8 +43,8 @@ li {
     z-index: 2;
     position: absolute;
     left: 3.5em;
-    top: 0.25em;
-    padding-right: 109px;
+    top: 0;
+    padding: 3px 109px 0 0;
 }
 
 .artist img {
@@ -55,7 +56,7 @@ li {
 .chartbar {
     position: absolute;
     z-index: 1;
-    height: 1.25em;
+    height: 18px;
     background: #ddd;
     top: 0;
     left: 0;
