--- a/css/yearly.css
+++ b/css/yearly.css
@@ -1,15 +1,46 @@
 body {
    margin: 0; 
    padding: 1em;
-   font-family: "Lucida Grande", sans-serif;
+   font-family: monospace;
+   font-size: 12px;
+   color: #999;
 }
 
 p {
     margin: 0 0 1.2em 0;
+    max-width: 50em;
+}
+
+form {
+    overflow: hidden;
+}
+
+form p {
+    clear: both;
+    margin: 0;
+}
+
+form .blah {
+    float: left;
+    display: inline;
+    clear: none;
+    margin: 0 16px 1.2em 0;
+}
+
+p a {
+    color: #ff2863;
+}
+
+p a:visited {
+    color: #FF84B4;
 }
 
 form {
     margin: 0 0 1.2em 0;
+}
+
+label {
+    color: #333;
 }
 
 ul {
@@ -19,6 +50,8 @@ ul {
     width: 100%;
     line-height: 1;
     font-size: 12px;
+    font-family: "Lucida Grande", sans-serif;
+    color: #333;
 }
 
 li {
@@ -60,9 +93,13 @@ li {
     background: #ddd;
     top: 0;
     left: 0;
+    -moz-border-radius-topright: 9px;
+    -moz-border-radius-bottomright: 9px;
+    -webkit-border-top-right-radius: 9px;
+    -webkit-border-bottom-right-radius: 9px;
 }
 
 .inBestOf {
-    color: #FF2863;
+    color: #ff2863;
     font-weight: bold;
 }
